# krapka

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  your_program.sh
.cache/clangd/index/: api_all.cpp.95A094DB7E2AF4AA.idx  api_all.hpp.D485393B40AC8A5B.idx  constants.hpp.5C55EBE6D298DA28.idx  hexutil.cpp.070B94B3529C0A31.idx  hexutil.hpp.07F65D8B654F73A4.idx  main.cpp.24B7BD830FA76053.idx  message.hpp.8DE29C4371A0B26B.idx  primitive.cpp.3636DB2FA7FF1ED1.idx  primitive.hpp.94C0D47A193CF7A3.idx  test_primitive.cpp.44A4802D86F354A3.idx
misc/: hex_test.py  hexdump
src/: main.cpp
src/api/: CMakeLists.txt  api_all.cpp  api_all.hpp  constants.hpp
src/cls/: CMakeLists.txt  message.hpp  primitive.hpp  record.hpp  request_message.hpp  response_message.hpp
src/global/: CMakeLists.txt  constants.hpp  datamap.cpp  datamap.hpp
src/test/: test_primitive.cpp
src/util/: CMakeLists.txt  hexutil.cpp  hexutil.hpp
